docs/backend-go: update swagger docs
