# backend-go/docs/swagger.json
@@ -352,7 +352,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/entities.Claim"
+                                                "$ref": "#/definitions/services.ClaimListResult"
                                             }
                                         }
                                     }
@@ -2889,6 +2889,29 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "services.ClaimListResult": {
+            "type": "object",
+            "properties": {
+                "claims": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Claim"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
                 }
             }
         }
